# empserver

./: .cvsignore  .gitignore  .travis.yml  COPYING  CREDITS  GNUmakefile.in  LEGAL  Make.mk  Make.sysdefs  Makefile  README  bootstrap  build.conf  configure.ac  flake.nix
build-aux/: git-version-gen
doc/: CHANGES  CHANGES2.3  CHANGES3.0  CHANGES4.X  README  WACKY_IDEAS  WISH_LIST  backups  bug-reports  clients-howto  coding  compiling  configuration  contributing  debugging  disk_space  econfig  files  message  pthreads  schedule  threads  troubleshooting  unicode  xdump
include/: .cvsignore  actofgod.h  bit.h  budg.h  chance.h  com.h  combat.h  commands.h  commodity.h  common.h  damage.h  deity.h  distribute.h  econfig-spec.h  empio.h  empobj.h  empthread.h  event.h  file.h  fnameat.h  game.h  gen.h  genitem.h  getopt.h  global.h  io_mask.h  ioqueue.h  item.h  journal.h  keyword.h  land.h  loan.h  lost.h  lwp.h  map.h  match.h  misc.h  mission.h  nat.h  news.h  (+34 more)
info/: .cvsignore  Attacking.t  Autofish.t  Autonav.t  BTU.t  Basics.t  Blank.awk  Bridges.t  Bugs.t  CHANGES.CHAINSAW.t  CRT.MAC  Chainsaw.t  Citizens.t  Clients.t  Common-Fever.t  Damage.t  Education.t  Empire2.t  Empire3.t  Empire4.0.t  Empire4.2.t  Empire4.3.t  Empire4.4.t  Empire4.t  Expert.t  Fallout.t  Flak.t  Food.t  God.t  Guerrilla.t  Guide.t  Happiness.t  Hidden.t  History.t  Hitchance.t  Hvy-Fever.t  Hvy-Metal.t  Hvy-Plastic.t  INFO.MAC  Infrastructure.t  (+213 more)
info/Commands/: MakeSrcs  accept.t  announce.t  anti.t  arm.t  army.t  assault.t  attack.t  bestdistpath.t  bestpath.t  bmap.t  board.t  bomb.t  break.t  budget.t  build.t  buy.t  bye.t  capital.t  cargo.t  cede.t  census.t  change.t  commodity.t  consider.t  country.t  cutoff.t  declare.t  deliver.t  demobilize.t  designate.t  disarm.t  dissolve.t  distribute.t  drop.t  dump.t  echo.t  edit.t  enlist.t  execute.t  (+120 more)
info/Concepts/: .cvsignore  Attack.t  Attacking.t  Autofeed.t  Autonav.t  BTU.t  Citizens.t  Damage.t  Education.t  Fallout.t  Food.t  Guerrilla.t  Happiness.t  Hitchance.t  Innards.t  Interception.t  Item-types.t  Land-units.t  Maintenance.t  MakeSrcs  Makefile  Mobility.t  Move.t  Nuke-types.t  Plague.t  Plane-types.t  Products.t  Quick-ref.t  Research.t  Sector-types.t  Selector.t  Sheep.t  Ship-types.t  Spies.t  Syntax.t  Taxes.t  Technology.t  Unit-types.t  Update-sequence.t
info/Introduction/: Basics.t  Clients.t  Guide.t  Hints.t  MakeSrcs  Makefile  Novice.t  Overview.t
info/Server/: Bugs.t  CHANGES.CHAINSAW.t  Empire2.t  Empire3.t  Empire4.t  God.t  Hidden.t  History.t  MakeSrcs  Makefile  Old-empire.t  Options.t
info/Subjects/: MakeSrcs  Makefile
m4/: lib_socket_nsl.m4  my_append_compile_flags.m4  my_func_makecontext.m4  my_lib_readline.m4  my_terminfo.m4  my_windows_api.m4  my_working_in6_is_addr_v4mapped.m4
man/: emp_client.6  emp_server.6  empdump.6  empire.6  empsched.6  fairland.1  fairland.6  files.1  files.6  land.1  ore.1  pconfig.1  pconfig.6  perfect.1
scripts/: README  backup  backup.bat  bigstart  crontab.config  keepitup  postresults  saveass  savecore  xdump.pl
scripts/blitz/: README  crontab.config  motd  setup-blitz  start-blitz
scripts/blitz-w32/: blitz_script.bat
scripts/mapper/: Makefile  README  archive.pl  cleanup  crontab.config  default.param  makeframe  makempeg  map.param  mapper  over.awk  over2.pbm  param.pl  pgmmap.awk  randppm.awk  text.pbm  text.size
src/: .cvsignore  make.defs  make.rules
src/client/: .cvsignore  Makefile  Makefile.in  Makefile.server  Makefile.standalone  README  bit.c  bit.h  configure.ac  dtable.c  empire.6  expect.c  fnlist.h  getpass.c  globals.c  h.h  handle.c  host.c  hpux.c  ioqueue.c  ioqueue.h  ipglob.c.in  linebuf.c  linebuf.h  login.c  main.c  misc.h  play.c  proto.h  queue.c  queue.h  ringbuf.c  ringbuf.h  saveargv.c  secure.c  secure.h  servcmd.c  serverio.c  sysdep_w32.c  sysdep_w32.h  (+4 more)
src/doconfig/: .cvsignore  Makefile  doconfig.c
src/lib/as/: COPYRIGHT  Makefile  README  as.h  as_cache.c  as_costcomp.c  as_delete.c  as_extend.c  as_hash.c  as_init.c  as_merge.c  as_search.c  as_stats.c  as_winnow.c
src/lib/commands/: Makefile  acce.c  add.c  anti.c  arm.c  army.c  assa.c  atta.c  bdes.c  best.c  boar.c  bomb.c  brea.c  budg.c  (+152 more)
src/scripts/: cvsfiles.awk  gen-client-configure  gen-tarball-version  indent-emp  ls-sources.pl  mkdist  tag-changeling  tarball
src/server/: .cvsignore  Makefile  idle.c  lostitem.c  main.c  marketup.c  shutdown.c  timestamp.c  update.c
src/util/: .cvsignore  Makefile  README  empdump.c  empsched.c  fairland.c  files.c  land.c  ore.c  pconfig.c  perfect.c
tests/: actofgod-test  bridgefall-test  build-test  empdump-test  fairland-test  files-test  fire-test  info-test  load-tend-test  navi-march-test  normalize.pl  retreat-test  smoke-test  test-common.sh  torpedo-test  update-test  version-test
tests/actofgod/: actofgod.xdump  final.xdump  geninput.pl  init_script  setup-POGO
tests/bridgefall/: final.xdump  setup-POGO
tests/empdump/: errors.err  errors.status  verify-fails  verify-fixed  verify-prep
tests/fairland/: fairland.out  fairland.xdump  final.xdump  newcap_script  no-spike-newcap_script  no-spike.out  no-spike.xdump  plain-newcap_script  plain.out  plain.xdump  spike-newcap_script  spike.out  spike.xdump  stunted-newcap_script  stunted.out  stunted.xdump
tests/files/: files.out  files.xdump  final.xdump
tests/fire/: 01-1  01-sector-1  02-POGO  03-ship-1  04-POGO  05-land-1  99-POGO  final.xdump  init_script  setup-POGO
tests/info/: cmp-toc-vs-lists.pl
tests/load-tend/: 01-load-1  02-load-POGO  03-tend-1  04-tend-POGO  05-ltend-1  06-ltend-POGO  99-POGO  final.xdump  setup-POGO
tests/navi-march/: 01-navigate-1  02-march-1  99-POGO  final.xdump  setup-POGO
tests/retreat/: 01-retreat-1  99-POGO  final.xdump  setup-2  setup-POGO
tests/smoke/: fairland.xdump  final.xdump  newcap_script  smoke.out  smoke.xdump
tests/torpedo/: 01-torpedo-1  99-POGO  final.xdump  setup-POGO
tests/update/: 01-1  02-2  03-3  04-4  06-6  07-7  99-POGO  final.xdump  setup-POGO
tests/version/: setup-POGO
(+453 files in other folders)
